mywebsite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  namespace: mywebsite  # Namespace should match
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
      - name: my-website
        image: m2s-registry.osl.team/taki-test/mywebsite:v1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-config-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-config-volume
        configMap:
          name: html-config
