mywebsite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website-ingress
  namespace: mywebsite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: my-website
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.mywebsite.team
      secretName: my-website-tls
  rules:
    - host: dev.mywebsite.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-website-service
                port:
                  number: 80
